// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - ContactDetails when logged in as buddy renders correctly 1`] = `
<BackPageContainer
  backGroundShape={true}
  id="contact-details-page"
  title="Contact Details"
>
  <ContactDetailsPlaceHolder />
  <a
    href="/buddy/newbies/1234/edit-details"
    onClick={[Function]}
  >
    <EditButton
      aria-label="Edit contact details"
      disabled={false}
      title="Update Contact Details"
    />
  </a>
</BackPageContainer>
`;

exports[`Component - ContactDetails when logged in as buddy renders correctly 2`] = `
<BackPageContainer
  backGroundShape={true}
  id="contact-details-page"
  title="Contact Details"
>
  <UserDetails
    details={
      Object {
        "email": "tom@wipro.com",
        "id": "1234",
        "name": "Tom Hanks",
        "notes": "Nice guy",
        "phoneNumber": "1234567",
        "photo": "some-url",
        "position": "Dev Ops",
        "role": "NEWBIE",
        "startDate": "2010-01-01",
      }
    }
  />
  <a
    href="/buddy/newbies/1234/edit-details"
    onClick={[Function]}
  >
    <EditButton
      aria-label="Edit contact details"
      disabled={false}
      title="Update Contact Details"
    />
  </a>
</BackPageContainer>
`;

exports[`Component - ContactDetails when logged in as newbie renders correctly 1`] = `
<BackPageContainer
  backGroundShape={true}
  id="contact-details-page"
  title="Contact Details"
>
  <UserDetails
    details={
      Object {
        "email": "tom@wipro.com",
        "id": "1234",
        "name": "Tom Hanks",
        "phoneNumber": "1234567",
        "photo": "some-url",
        "position": "Dev Ops",
        "role": "BUDDY",
        "startDate": "2010-01-01",
      }
    }
  />
</BackPageContainer>
`;

exports[`Component - ContactDetails when logged in as newbie renders correctly 2`] = `
<BackPageContainer
  backGroundShape={true}
  id="contact-details-page"
  title="Contact Details"
>
  <UserDetails
    details={
      Object {
        "email": "tom@wipro.com",
        "id": "1234",
        "name": "Tom Hanks",
        "phoneNumber": "1234567",
        "photo": "some-url",
        "position": "Dev Ops",
        "role": "BUDDY",
        "startDate": "2010-01-01",
      }
    }
  />
</BackPageContainer>
`;
